--- a/package.json
+++ b/package.json
@@ -18,5 +18,10 @@
     "express": "^4.17.1",
     "express-handlebars": "^3.0.2",
     "pug": "^3.0.2"
+  },
+  "nodemonConfig": {
+    "ignore": [
+      "data/products.json"
+    ]
   }
 }
