--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "ejs": "^3.1.6",
     "express": "^4.17.1",
     "express-handlebars": "^3.0.2",
+    "generate-unique-id": "^2.0.1",
     "pug": "^3.0.2"
   },
   "nodemonConfig": {
