some variable names changed and comment added or removed

--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "express": "^4.17.1",
     "express-handlebars": "^3.0.2",
     "generate-unique-id": "^2.0.1",
+    "mysql2": "^2.3.3",
     "pug": "^3.0.2"
   },
   "nodemonConfig": {
