partially applied sequelize

--- a/package.json
+++ b/package.json
@@ -19,7 +19,8 @@
     "express-handlebars": "^3.0.2",
     "generate-unique-id": "^2.0.1",
     "mysql2": "^2.3.3",
-    "pug": "^3.0.2"
+    "pug": "^3.0.2",
+    "sequelize": "^7.0.0-alpha.4"
   },
   "nodemonConfig": {
     "ignore": [
