--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "generate-unique-id": "^2.0.1",
     "mariadb": "^2.5.5",
     "mongodb": "^4.3.0",
+    "mongoose": "^6.1.7",
     "mysql2": "^2.3.3",
     "pug": "^3.0.2",
     "sequelize": "^7.0.0-alpha.4"
