User input validation added

--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "express": "^4.17.1",
     "express-handlebars": "^3.0.2",
     "express-session": "^1.17.2",
+    "express-validator": "^6.14.0",
     "generate-unique-id": "^2.0.1",
     "mariadb": "^2.5.5",
     "mongodb": "^4.3.0",
