--- a/package.json
+++ b/package.json
@@ -27,10 +27,12 @@
     "mariadb": "^2.5.5",
     "mongodb": "^4.3.0",
     "mongoose": "^6.1.7",
+    "multer": "^1.4.4",
     "mysql2": "^2.3.3",
     "nodemailer": "^6.7.2",
     "nodemailer-sendgrid-transport": "^0.2.0",
     "pug": "^3.0.2",
+    "random-hash": "^4.0.1",
     "sequelize": "^7.0.0-alpha.4"
   },
   "nodemonConfig": {
